# portfolio-web-agent

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  workbook.ipynb
data/: summary.txt
